src/css/common.scss
$gray: #6b6b6b;
$white: #fff;

i > span {
  font-style: italic !important;
}

.easysubs-enable #easysubs {
  display: block;
}

#easysubs {
  display: none;
  z-index: 1;
  position: absolute;
  bottom: 80px;
  left: 50%;
  transform: translateX(-50%);
  font-size: 42px;
  text-align: center;
  user-select: all;
  line-height: 1.25;
  cursor: pointer;
  user-select: none;

  .easysubs-word {
    position: relative;
    color: $white;
  }

  .easysubs-subtitles {
    &__sub {
      position: relative;
      white-space: pre-line;
      background-color: transparent;

      .easysubs-show-subtitles-background & {
        background-color: rgba(0, 0, 0, 0.5);
      }

      margin-top: 5px;
      padding: 0 10px;
    }
  }

  .easysubs-translate {
    white-space: pre;

    &-ui-compensation {
      width: 100%;
      position: absolute;
      height: 4%;
      bottom: -4%;
    }

    &-container {
      top: 0;
      left: 50%;
      transform: translate3d(-50%, -100%, 0);
      padding: 10px 25px;
      position: absolute;
      background-color: #1e1e1e;
      border-radius: 0.4em;
      font-size: 16px;
      max-width: fit-content;
      font-style: normal;
      white-space: normal;
      box-sizing: content-box;

      &.-full-sub {
        width: 100%;
        top: -5px;
      }

      &:after {
        content: "";
        position: absolute;
        bottom: 0;
        left: 50%;
        width: 0;
        height: 0;
        border: 10px solid transparent;
        border-top-color: #1e1e1e;
        border-bottom: 0;
        margin-left: -10px;
        margin-bottom: -10px;
      }

      hr {
        margin: 5px auto 3px auto;
        height: 1px;
        background-color: #666;
        width: 60%;
        border-top: none;
      }
    }

    &-result {
      color: $white;
      white-space: pre-line;
      width: 100%;
    }

    &-original {
      font-weight: bold;
      color: $gray;
      white-space: pre;
    }

    &-alternative {
      text-align: left;
      color: $gray;
      width: max-content;
      max-height: 200px;
      overflow-y: auto;
      font-size: 14px;
      padding-right: 5px;

      &::-webkit-scrollbar {
        width: 5px;
      }

      &::-webkit-scrollbar-track {
        background: transparent;
      }

      &::-webkit-scrollbar-thumb {
        background: #666;
        border-radius: 10px;
      }

      &-part-speech {
        padding-top: 15px !important;
        font-weight: bold;
        text-transform: uppercase;
        font-size: 12px;
      }

      table {
        width: max-content;
        border-collapse: separate;
        border-spacing: 0 5px;

        th,
        td {
          background-color: #1e1e1e;
          padding: 0;
        }
      }
      &-item {
        word-break: break-word;

        &-add-to-learn {
          padding-right: 10px !important;
          svg {
            width: 12px;
          }
        }

        &-translate {
          color: $white;
          max-width: 115px;
          min-width: 50px;
          padding-right: 10px !important;
        }

        &-original {
          max-width: 150px;
          min-width: 50px;
          padding-right: 10px !important;
        }

        &-frequency {
          width: 34px;

          &-dot {
            display: inline-block;
            width: 10px;
            height: 6px;
            margin-right: 2px;
            background-color: $gray;

            &.-fill {
              background-color: #c6c6c6;
            }
            &:last-child {
              margin-right: 0;
            }
          }
        }
      }
    }
  }
}

